fixed dropdown z-index

--- a/frontend-react-app/src/components/shared_components/navbar/scss/AboutDropDown.module.scss
+++ b/frontend-react-app/src/components/shared_components/navbar/scss/AboutDropDown.module.scss
@@ -10,7 +10,6 @@
 }
 .clientDropDownContainer {
   align-items: center;
-  // column-gap: 3vh;
   cursor: pointer;
   @include theme.xs {
     column-gap: 0.3vh;
@@ -43,6 +42,7 @@
 }
 
 .aboutPopper {
+  z-index: 100;
   @include theme.xs {
     padding: 0px;
   }
